deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ai-assistant
  template:
    metadata:
      labels:
        app: ai-assistant
    spec:
      containers:
      - name: ai-assistant
        image: localhost:8083/ai-assistant:build-1
        imagePullPolicy: Never
        ports:
        - containerPort: 8501
        volumeMounts:
        - name: streamlit-secrets
          mountPath: /app/.streamlit/secrets.toml   
          subPath: secrets.toml
      volumes:
      - name: streamlit-secrets
        secret:
          secretName: streamlit-secrets
